package games.preachOrDie1000HolyPlague.populations;

import games.preachOrDie1000HolyPlague.Population;

public class Believer extends Population {

	public Believer(double count) {
		super(count);
	}

}
