package games.preachOrDie1000HolyPlague.populations;

import games.preachOrDie1000HolyPlague.Population;

public class Heretic extends Population {

	public Heretic(double count) {
		super(count);
	}

}
