package games.preachOrDie1000HolyPlague.populations;

import games.preachOrDie1000HolyPlague.Population;

public class Normal extends Population {

	public Normal(double count) {
		super(count);
	}

}
