package plague;

public abstract class Population {

    private int count;

}
