package plague.nodes.links;

import plague.nodes.Link;

public class RoadLink extends Link {

}
